Update to squash bugs, add step sizes, and change some styling

--- a/app/assets/stylesheets/jsgcalc.css
+++ b/app/assets/stylesheets/jsgcalc.css
@@ -71,16 +71,28 @@ h1 { margin: 0; padding: 0;}
 	width:100%;
 	height:75px;
 	float:left;
+    padding: 5px;
+    background-color: #DADADA;
+    margin-bottom: 10px;
+}
+.stepsize {
+	width: 50px;
+    border: none;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 5px;
 }
 .paramdiv {
 	width:100%;
 	float:left;
-	margin-bottom: 5px;
-	padding-left: 5px;
+	margin-bottom:10px;
 }
 .minmax {
-	width:50px;
-	float:left;
+	width: 50px;
+    float: left;
+    border: none;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 .slidediv {
 	width:calc(100% - 110px);
